Fix `copyright` text alignment on

--- a/src/components/sections/Home/Banner/banner.module.scss
+++ b/src/components/sections/Home/Banner/banner.module.scss
@@ -194,6 +194,8 @@
     font-size: 1.2rem;
     letter-spacing: 0.2px;
     text-shadow: 4px 4px 14px rgba(0, 0, 0, 0.6);
+    text-align: center;
+    line-height: 1.6rem;
 
     a {
       text-decoration: underline;
